fjerde push --> mangler stadig graf 2 og tekst

--- a/login.css
+++ b/login.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Georgia", serif;
     margin: 2;
-    background-color: #fae8cc;
+    background-color: #fdf6ee;
     color: #000;
 }
 
