--- a/login.css
+++ b/login.css
@@ -29,7 +29,7 @@ button {
     padding-right: 100px;
     padding-top: 10px;
     padding-bottom: 10px;
-    margin-top: 40px;
+    margin: 40px auto 0 auto;
 }
 
 
@@ -40,4 +40,13 @@ body {
     margin-top: 100px;
 }
 
+div{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1.2rem;
+}
+
+form {
+    width: 22rem;
+}
 
