--- a/style.css
+++ b/style.css
@@ -144,3 +144,16 @@ li{
     margin: 25px;
     font-size: 1rem;
 }
+
+a {
+    padding: 8px 14px;
+    border-radius: 6px;
+    background: #23206e;
+    color: #F5F1EC;
+    text-decoration: none;
+}
+
+a:hover {
+    background-color: #121242;
+    font-size: 1.3em;
+}
