--- a/style.css
+++ b/style.css
@@ -17,38 +17,49 @@ header {
     padding: 20px; /*note: giver luft*/
 }
 
-.nav-container{
+.nav-container {
     display: flex;
     align-items: center;
 }
 
-h3{
+h3 {
     font-size: 1.2rem;
     margin-left: 60px;
 }
 
-a{
+a {
     font-size: 1.2rem;
-     margin-right: 80px;
+    margin-right: 80px;
 }
-
 
 
 /*----------------main section----------------*/
 h1 {
     text-align: center; /*note: centrerer h1*/
-    padding: 20px;
-    margin-top: 60px;
-    margin-bottom: 100px; /*note: luft under h1 */
+    margin-top: 80px;
     font-size: 2.5rem;
+    margin-bottom: 60px;
+}
+
+p {
+    font-size: 1.5rem;
+    margin-bottom: 30px;
+}
+
+ul {
+    margin-bottom: 80px;
+}
+
+li {
+    margin: 25px;
+    font-size: 1.3rem;
 }
 
 /*note: vi bruger main for at placerer sektionerne lodret*/
 main {
     display: flex;
     flex-direction: column; /*note: lægger sektionerne under hinanden, fra top til bund */
-    gap: 120px; /*note: laver luft mellem de to sektioner*/
-    margin: 50px auto; 
+    margin: 50px auto;
     max-width: 1200px; /*note: gør at indholdet ikke fylder hele skærmen */
 }
 
@@ -56,47 +67,52 @@ main {
 
 .genre {
     display: flex; /*note: lægger tekst og graf ved siden af hinanden*/
-    align-items: stretch; /*note: giver begge sider samme højde/bredde*/
+    flex-direction: row;
     background: white;
     border-radius: 20px;
     overflow: hidden; /*note: gemmer indhold, der stikker ud*/
-    height: 400px;
+    margin-bottom: 120px; /*note: laver luft mellem de to sektioner*/
 }
 
 .text-genre {
-    background-color: #23206e; 
+    background-color: #23206e;
     color: white;
     padding: 80px;
     display: flex;
     flex-direction: column; /*note: lægger h2 og p under hinanden */
     justify-content: center; /*note: centrerer h2 og p*/
+    width: 50%;
 }
+
 .text-genre h2 {
     font-size: 1.8rem;
     margin-bottom: 20px;
 }
 
 .text-genre p {
-    font-size: 1rem;                
+    font-size: 1.2rem;
+    margin-bottom: 20px;
 }
 
 .chart-genre {
     display: flex;
     justify-content: center;
     background-color: white;
-    padding: 80px;
+    padding: 15px;
+    width: 50%;
 }
+
 /*--graf 2 om tracks--*/
 
-.tracks{
-    display: flex;  /*note: lægger tekst og graf ved siden af hinanden*/
-    flex-direction: column;   /*note: giver begge sider samme højde/bredde*/
+.tracks {
+    display: flex; /*note: lægger tekst og graf ved siden af hinanden*/
+    flex-direction: column; /*note: giver begge sider samme højde/bredde*/
     background-color: white;
     border-radius: 20px;
-    overflow: hidden;    /*note: gemmer indhold, der stikker ud*/
+    overflow: hidden; /*note: gemmer indhold, der stikker ud*/
 }
 
-.text-tracks{
+.text-tracks {
     background-color: #23206e;
     color: white;
     padding: 80px;
@@ -110,50 +126,45 @@ main {
     margin-bottom: 10px;
 }
 
-.text-tracks p{
-    font-size: 1rem;
+.text-tracks p {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
 }
 
-.chart-tracks{
+.chart-tracks {
     display: flex;
     justify-content: center;
     background-color: white;
-    padding: 80px;
+    padding: 50px;
 }
 
+/*--opsummering--*/
+.summary h2 {
+    margin-top: 100px;
+}
+
+.summary p {
+    margin-bottom: 50px;
+}
 
 /*--footer--*/
 
-footer{
+footer {
     background-color: #F5F1EC;
     padding: 40px;
     margin-top: 35px;
 }
 
-h3{
-font-size: 1.4rem;
-margin-bottom: 35px;
-          
+footer h3 {
+    font-size: 1.4rem;
+    margin-bottom: 35px;
 }
 
-ul{
+footer ul {
     list-style: none;
 }
 
-li{
+footer li {
     margin: 25px;
     font-size: 1rem;
-}
-
-a {
-    padding: 8px 14px;
-    border-radius: 6px;
-    background: #23206e;
-    color: #F5F1EC;
-    text-decoration: none;
-}
-
-a:hover {
-    background-color: #121242;
-    font-size: 1.3em;
 }
